--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint lib test",
     "test": "yarn run lint && jest --detectOpenHandles",
     "release": "standard-version && git push --follow-tags && npm publish",
-    "commitlint": "commitlint -e",
+    "commitlint": "commitlint -E HUSKY_GIT_PARAMS",
     "coverage": "codecov"
   },
   "eslintIgnore": [
