--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-purgecss",
-  "version": "0.2.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Drop superfluous CSS! A neat PurgeCSS wrapper for Nuxt.js",
   "license": "MIT",
   "contributors": [
     {
@@ -21,15 +21,10 @@
   },
   "scripts": {
     "dev": "nuxt --config-file test/fixture/configs/postcss/default.js",
-    "lint": "eslint lib test",
-    "test": "yarn run lint && jest --detectOpenHandles",
-    "release": "standard-version && git push --follow-tags && npm publish",
-    "commitlint": "commitlint -E HUSKY_GIT_PARAMS",
-    "coverage": "codecov"
+    "lint": "eslint --ext .js,.vue .",
+    "release": "yarn test && standard-version && git push --follow-tags && npm publish",
+    "test": "yarn lint && jest"
   },
-  "eslintIgnore": [
-    "lib/templates/*.*"
-  ],
   "files": [
     "lib"
   ],
@@ -41,7 +36,7 @@
     "css"
   ],
   "engines": {
-    "node": ">=8.0.0",
+    "node": ">=10.0.0",
     "npm": ">=5.0.0"
   },
   "jest": {
@@ -61,25 +56,16 @@
     "purgecss-webpack-plugin": "^2.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "babel-eslint": "^10.0.1",
-    "codecov": "^3.3.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "get-port": "^4.2.0",
+    "@commitlint/cli": "latest",
+    "@commitlint/config-conventional": "latest",
+    "@nuxtjs/eslint-config": "latest",
+    "@nuxtjs/module-test-utils": "latest",
+    "eslint": "latest",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "jsdom": "^13.2.0",
-    "nuxt-edge": "^2.3.0-25706271.cca799c",
-    "standard-version": "^4.4.0"
+    "nuxt-edge": "latest",
+    "standard-version": "latest"
   },
   "husky": {
     "hooks": {
