--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "@nuxtjs/eslint-config": "latest",
     "@nuxtjs/module-test-utils": "latest",
     "eslint": "latest",
-    "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "jsdom": "^13.2.0",
+    "husky": "latest",
+    "jest": "latest",
+    "jsdom": "latest",
     "nuxt-edge": "latest",
     "standard-version": "latest"
   },
