--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-purgecss",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Drop superfluous CSS! A neat PurgeCSS wrapper for Nuxt.js",
   "keywords": [
     "nuxtjs",
@@ -18,31 +18,38 @@
   ],
   "main": "lib/module.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
-    "dev": "nuxt --config-file test/fixture/configs/postcss/default.js",
-    "lint": "eslint --ext .js,.vue .",
-    "release": "yarn test && standard-version && git push --follow-tags && npm publish",
-    "test": "yarn lint && jest"
+    "prepack": "nuxt-module-build",
+    "lint": "eslint --ext .js,.ts,.vue",
+    "lint:all": "yarn lint .",
+    "release": "yarn test && release-it",
+    "prepublishOnly": "yarn test",
+    "test": "yarn vitest run"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@nuxt/kit": "^3.0.0-rc.11",
     "consola": "^2.11.3",
     "glob-all": "^3.2.1",
-    "purgecss": "^2.1.2",
-    "purgecss-webpack-plugin": "^2.1.2"
+    "@fullhuman/postcss-purgecss": "^5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "@nuxtjs/eslint-config": "latest",
-    "@nuxtjs/module-test-utils": "latest",
-    "eslint": "latest",
-    "husky": "latest",
-    "jest": "latest",
-    "nuxt-edge": "latest",
-    "standard-version": "latest"
+    "@nuxt/module-builder": "latest",
+    "@nuxt/test-utils": "3.0.0-rc.11",
+    "@nuxtjs/eslint-config-typescript": "11.0.0",
+    "@release-it/conventional-changelog": "5.1.0",
+    "c8": "^7.12.0",
+    "eslint": "8.24.0",
+    "eslint-config-prettier": "8.5.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "nuxt": "npm:nuxt3@3.0.0-rc.11-27722816.abd0feb",
+    "release-it": "15.4.2",
+    "vitest": "^0.23.4"
+  },
+  "resolutions": {
+    "nuxt-purgecss": "link:./"
   },
   "publishConfig": {
     "access": "public"
