--- a/package.json
+++ b/package.json
@@ -16,23 +16,33 @@
       "name": "Alexander Lichter <npm@lichter.io>"
     }
   ],
-  "main": "lib/module.js",
-  "files": [
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
+  },
+  "main": "./dist/module.cjs",
+  "types": "./dist/module.d.ts",  "files": [
     "dist"
   ],
   "scripts": {
     "prepack": "nuxt-module-build",
-    "lint": "eslint --ext .js,.ts,.vue",
+    "dev": "nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "lint": "eslint --ext .js,.ts,.vue --fix",
     "lint:all": "yarn lint .",
     "release": "yarn test && release-it",
     "prepublishOnly": "yarn test",
     "test": "yarn vitest run"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@nuxt/kit": "^3.0.0-rc.11",
-    "consola": "^2.11.3",
-    "glob-all": "^3.2.1",
-    "@fullhuman/postcss-purgecss": "^5.0.0"
+    "consola": "^2.15.3",
+    "glob-all": "^3.2.1"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
