--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     }
   },
   "main": "./dist/module.cjs",
-  "types": "./dist/module.d.ts",  "files": [
+  "types": "./dist/module.d.ts",
+  "files": [
     "dist"
   ],
   "scripts": {
@@ -42,7 +43,8 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@nuxt/kit": "^3.0.0-rc.11",
     "consola": "^2.15.3",
-    "glob-all": "^3.2.1"
+    "glob-all": "^3.2.1",
+    "purgecss": "^5.0.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
