--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [14]
+        os: [ubuntu-latest, macos-latest]
+        node: [16]
 
     steps:
       - uses: actions/setup-node@v3
