--- a/package.json
+++ b/package.json
@@ -16,33 +16,52 @@
       "name": "Alexander Lichter <npm@lichter.io>"
     }
   ],
-  "main": "lib/module.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
+  },
+  "main": "./dist/module.cjs",
+  "types": "./dist/module.d.ts",
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
-    "dev": "nuxt --config-file test/fixture/configs/postcss/default.js",
-    "lint": "eslint --ext .js,.vue .",
-    "release": "yarn test && standard-version && git push --follow-tags && npm publish",
-    "test": "yarn lint && jest"
+    "prepack": "nuxt-module-build",
+    "dev": "nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "lint": "eslint --ext .js,.ts,.vue --fix",
+    "lint:all": "yarn lint .",
+    "release": "yarn test && release-it",
+    "prepublishOnly": "yarn test",
+    "test": "yarn vitest run"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
-    "consola": "^2.11.3",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@nuxt/kit": "^3.0.0-rc.11",
+    "consola": "^2.15.3",
     "glob-all": "^3.2.1",
-    "purgecss": "^2.1.2",
-    "purgecss-webpack-plugin": "^2.1.2"
+    "purgecss": "^5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "@nuxtjs/eslint-config": "latest",
-    "@nuxtjs/module-test-utils": "latest",
-    "eslint": "latest",
-    "husky": "latest",
-    "jest": "latest",
-    "nuxt-edge": "latest",
-    "standard-version": "latest"
+    "@nuxt/module-builder": "latest",
+    "@nuxt/test-utils": "3.0.0-rc.11",
+    "@nuxtjs/eslint-config-typescript": "11.0.0",
+    "@release-it/conventional-changelog": "5.1.0",
+    "c8": "^7.12.0",
+    "eslint": "8.24.0",
+    "eslint-config-prettier": "8.5.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "nuxt": "npm:nuxt3@3.0.0-rc.11-27722816.abd0feb",
+    "release-it": "15.4.2",
+    "vitest": "^0.23.4"
+  },
+  "resolutions": {
+    "nuxt-purgecss": "link:./"
   },
   "publishConfig": {
     "access": "public"
